1. Work on log files. 2. Page should no longer jump on button panel resize. 3. MQ fonts should now work as expected.

--- a/html-common/styleCalculator.css
+++ b/html-common/styleCalculator.css
@@ -594,6 +594,14 @@ text-align: center;
 div.divExternalLogin{
 text-align: center;
 }
+div.mqButtonPanel{
+display: inline-block;
+margin: 0;
+padding: 0;
+-webkit-transition: max-height 2s ease;
+-moz-transition: max-height 2s ease;
+transition: max-height 2s ease;
+}
 form.formLogin > * {
 font-size: 1.1em;
 }
